--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
 /*  your css code here. If applicable */
+ #baguetteBox-overlay .full-image img{
+    height: 70%;
+}
+
+.gallery h2{
+	text-align: center;
+}
