--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
  #baguetteBox-overlay .full-image img{
     height: 70%;
 }
+.card{
+	border-radius:5px;
+}
 
-.gallery h2{
+.gallery h2,h6,p{
 	text-align: center;
 }
